Fixed footer size. It was causing a horizontal scrollbar to appear.

--- a/src/sensordatainterface/static/sensordatainterface/css/main_style.css
+++ b/src/sensordatainterface/static/sensordatainterface/css/main_style.css
@@ -25,6 +25,7 @@
 
 .footer {
     padding: 0px 15px;
+    margin-right: 0px;
     text-align: justify;
 }
 
